--- a/app/src/main/res/layout/activity_view_appointment.xml
+++ b/app/src/main/res/layout/activity_view_appointment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.AppointmentActivity">
+    tools:context=".AppointmentActivity">
 
     <!-- Título de la pantalla -->
     <TextView
@@ -22,28 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ScrollView
-        android:id="@+id/scrollView9"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/viewRegisterCitas"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingTop="100dp" />
-        </LinearLayout>
-    </ScrollView>
-
+    <!-- Botón de retroceso -->
     <ImageView
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
@@ -54,6 +33,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
 
+    <!-- Barra de progreso -->
     <ProgressBar
         android:id="@+id/progressBarRegisterCitas"
         style="?android:attr/progressBarStyle"
@@ -63,4 +43,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/scrollView9" />
+
+    <!-- ScrollView que contiene el RecyclerView y el botón -->
+    <ScrollView
+        android:id="@+id/scrollView9"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/titleText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <!-- RecyclerView -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/viewRegisterCitas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp" />
+
+            <!-- Botón para agregar citas -->
+            <Button
+                android:id="@+id/buttonAddAppointment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Añadir nueva cita"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/darkPurple"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
